chore: create new file css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
 
+    <link rel="stylessheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
 
     <title>OMNIFOOD</title>
