feat: completion of partition creation how it works

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylessheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
 
     <title>OMNIFOOD</title>
@@ -77,7 +77,7 @@
             Your daily dose of health in 3 simple steps
           </h2>
         </div>
-        <div class="container grid grid--2-cols">
+        <div class="container grid grid--2-cols grid--center-v">
           <!--STEP-01-->
           <div class="step-text-box">
             <p class="step-number">01</p>
