--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
           </h2>
         </div>
         <div class="container grid grid--3-cols">
+          <img src="img/meals/meal-1.jpg" class="meal-img" />
           <div class="meal">Meals</div>
           <div class="meal">Meals</div>
           <div class="list">List of diets</div>
