--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
        Eating well without breaking the bank
         </h2>
       <div class="container grid grid--2-cols">
-        <div class="pricing-plan">
+        <div class="pricing-plan pricing-plan--starter">
           <header class="plan-header">
 <p class="plan-name">Starter</p>
 <p class="plan-price"><span>$</span>399</p>
@@ -465,7 +465,7 @@
       class="list-icon"
       name="checkmark-circle-outline"
     ></ion-icon
-    ><span> Order times are between 11am and 9pm</span>
+    ><span> Order from 11am to 9pm</span>
   </li></ul>
   <li class="list-item">
     <ion-icon
@@ -473,14 +473,18 @@
       name="checkmark-circle-outline"
     ></ion-icon
     ><span>Delivery is free</span>
-  </li></ul>
+  </li>
+  <li class="list-item">
+       <ion-icon class="list-icon" name="close-circle-outline"></ion-icon>
+  </li>
+</ul>
   <div class="plan-sing-up">
 
   <a href="#" class="btn btn--full "
   >Start eating well</a>
         </div>
         </div>
-        <div class="pricing-plan">
+        <div class="pricing-plan pricing-plan--complete">
           <header class="plan-header">
 
             <p class="plan-name">Complete</p>
@@ -493,14 +497,14 @@
       class="list-icon"
       name="checkmark-circle-outline"
     ></ion-icon
-    ><span>2 meal per day</span>
+    ><span><strong>2</strong> meal per day</span>
   </li></ul>
   <li class="list-item">
     <ion-icon
       class="list-icon"
       name="checkmark-circle-outline"
     ></ion-icon
-    ><span> Order 24/7</span>
+    ><span> Order<strong>24/7</strong> </span>
   </li></ul>
   <li class="list-item">
     <ion-icon
@@ -524,9 +528,15 @@
 </div>
                 </div>
              </div>
+             <div class="container grid grid--4-cols">
+              <div class="feature">Feature 1</div>
+              <div class="feature">Feature 2</div>
+              <div class="feature">Feature 3</div>
+              <div class="feature">Feature 4</div>
+             </div>
       </section>
     </main>
-
+    
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
