chore: adaptation to resolution 400px

--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     <title>OMNIFOOD</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="#">
         <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
       </a>
       <nav class="main-nav">
-        Navigation
-        <ul class="main-nav-list">
+               <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#">How it works</a></li>
           <li><a class="main-nav-link" href="#">Meals</a></li>
           <li><a class="main-nav-link" href="#">Testimonials</a></li>
@@ -33,6 +32,10 @@
           <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
     <main>
       <section class="section-hero">
@@ -629,7 +632,7 @@
 
     </main>
     <footer class="footer">
-    <div class="container grid grid--5-cols">
+    <div class="container grid grid--footer">
 <div class="logo-col"> 
   <a href="#" class="footer-logo">
   <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
