--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
-
+<script defer src="/script.js"></script>
     <title>OMNIFOOD</title>
   </head>
   <body>
@@ -25,11 +25,11 @@
       </a>
       <nav class="main-nav">
                <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">How it works</a></li>
-          <li><a class="main-nav-link" href="#">Meals</a></li>
-          <li><a class="main-nav-link" href="#">Testimonials</a></li>
-          <li><a class="main-nav-link" href="#">Pricing</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+          <li><a class="main-nav-link" href="#how">How it works</a></li>
+          <li><a class="main-nav-link" href="#meals">Meals</a></li>
+          <li><a class="main-nav-link" href="#testimonial">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
         </ul>
       </nav>
       <button class="btn-mobile-nav">
@@ -49,10 +49,10 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--full margin-right-sm"
+            <a href="#cta" class="btn btn--full margin-right-sm"
               >Start eating well</a>
             
-            <a href="#" class="btn btn--outline">Learn more &darr;</a>
+            <a href="#how" class="btn btn--outline">Learn more &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-imgs">
                 <img src="img/customers/customer-1.jpg" alt="Customer photo" />
@@ -94,7 +94,7 @@
           </div>
         </div>
       </section>
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -158,7 +158,7 @@
           </div>
         </div>
       </section>
-      <section class="section-meals">
+      <section class="section-meals" id="meals">
         <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
@@ -301,9 +301,9 @@
         <div class="container all-recipes">
           <a href="#" class="link">See all recipes &rarr;</a>
         </div>
-      </section>
+      </section> 
 
-      <section class="section-testimonials">
+      <section class="section-testimonials" id="testimonial">
         <div class="testimonial-container">
           <span class="subheading">Testimonials</span>
           <h2 class="heading-secondary">Once You try it, you can't go back</h2>
@@ -446,7 +446,8 @@
           </figure>
         </div>
       </section>
-      <section class="=section-price"> <div class="container">
+      <section class="=section-price" id="pricing">
+         <div class="container">
         <span class="subheading">Pricing</span>
         <h2 class="heading-secondary">
        Eating well without breaking the bank
@@ -567,7 +568,7 @@
              </div>
       </section>
 
-<section class="section-cta">
+<section class="section-cta" id="cta">
 
 <div class="container">
   <div class="cta">
@@ -643,7 +644,9 @@
 <li><a class="footer-link" href="#"><ion-icon class="social-icon" name="logo-twitter"></ion-icon></a></li>
 
 </ul>
-<p class="copyright">Copyright &copy; 2027 by Omnifood Inc. All right reserved.</p>
+<p class="copyright">
+  Copyright &copy;<span class="year" >
+ 2027</span> by Omnifood Inc. All right reserved.</p>
 </div>
 <div class="address-col">
   <p class="footer-heading">Contact us</p>
