--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/queries.css" />
-<script defer src="/script.js"></script>
+      <link rel="stylesheet" href="css/queries.css" />
+<script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
+     <script defer src="/script.js"></script>
     <title>OMNIFOOD</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
       </a>
