--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>OMNIFOOD</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header sticky">
       <a href="#">
         <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
       </a>
