--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta name="description" content="Omnifood is 
+   an AI-powered food subscriptio that will make
+   you eat healthy again, 365 days per years. It's 
+   tailored to your personal tastes and nutritional needs"/>
+   
+   <!-- Always include this kine of code!!!! -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<link rel="icon" href="img/favicon.png">
+<link rel="apple-touch-icon " href="img/apple-touch-icon.png">
+<link rel="manifest" href="manifest.webmanifest"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +25,7 @@
       <link rel="stylesheet" href="css/queries.css" />
 <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
      <script defer src="/script.js"></script>
-    <title>OMNIFOOD</title>
+    <title>OMNIFOOD &mdash; Never cook again!</title>
   </head>
   <body>
     <header class="header sticky">
