--- a/index.html
+++ b/index.html
@@ -588,16 +588,18 @@
       <p class="cta-text">
         Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
       </p>
-    <form class="cta-form" action="#">
+    <form class="cta-form" name="sign-up" netlify>
       <div>
 
         <label for="full-name">Full Name</label>
-        <input id="full-name"  type="text" placeholder="Jonny" required />
+        <input id="full-name"  type="text" placeholder="Jonny" name="full name" required />
       </div>
      <div>
 
        <label for="email">Email address</label>
-       <input id="email" type="email" placeholder="m@example.com" required />
+       <input id="email" type="email" placeholder="m@example.com" 
+       name="email"
+       required />
       </div>  
        
      <div>
@@ -605,7 +607,8 @@
        <label for="select-here">Where did you hear from us?
       </label>
       
-      <select id="select-where" required>
+      <select id="select-where"
+      name="select-where" required>
         <option value="">Please choose one option</option>
         <option value="friends">
           Friend and family
